--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>companyStuff</title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1>Company Search</h1>
+    <h4 id="information">Here you can find company information</h4>
+    <section id="formContainer">
+      <form action="{search}">
+        <input name="Company Name" />
+        <input name="Year" />
+        <button type="Reset">Reset Form</button>
+        <button type="submit">Search</button>
+      </form>
+    </section>
+
+    <!-- <div id="root"></div> -->
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
