attempt to style the search section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>companyStuff</title>
   </head>
   <body>
+    <div id="topSection">
     <h1>Company Search</h1>
     <h4 id="information">Here you can find company information</h4>
-           <div id="root"></div>
+  </div>      
+    <div id="root"></div>
 
       </form>
     </section>
